--- a/app/styles/globals/mixins.scss
+++ b/app/styles/globals/mixins.scss
@@ -162,6 +162,8 @@
 
 @mixin formFieldState($textColor : #555555, $borderColor : #CCCCCC, $backgroundColor : #F5F5F5) {
     border-color : $borderColor;
+    color: $textColor;
+    background-color: $backgroundColor;
     //@include box-shadow($borderColor 0 0 0 1px inset);
 
     // Redeclare so transitions work
@@ -172,6 +174,18 @@
     &:focus {
         @include box-shadow(lighten($borderColor, 45%) 0 0 1px 1px);
     }
+}
+
+@mixin formInput() {
+    // Specific to the Action form inputs so they all get the same treatment
+    border: none;
+    width: 96%;
+    height: 40px;
+    padding: 4px;
+    font-size: 16px;
+
+    @include formFieldState(inherit, #cccccc, #6f7f99);
+    @include border-radius(5px);
 }
 
 @mixin chevronDropDown($borderColor, $offset : 6px, $borderWidth : 4px) {
